--- a/source/data_manipulation.html
+++ b/source/data_manipulation.html
@@ -137,7 +137,7 @@ $(document).ready(function () {
 
 <h1 class="title toc-ignore">Data Manipulation</h1>
 <h4 class="author"><em>Jeff Goldsmith</em></h4>
-<h4 class="date"><em>2018-06-22 14:05:58</em></h4>
+<h4 class="date"><em>2018-06-22 14:07:02</em></h4>
 
 </div>
 
@@ -159,6 +159,24 @@ litters_data = janitor::clean_names(litters_data)
 pups_data = read_csv(here::here(&quot;data&quot;, &quot;FAS_pups.csv&quot;),
   col_types = &quot;ciiiii&quot;)
 pups_data = janitor::clean_names(pups_data)</code></pre>
+<div id="manipulate" class="section level2">
+<h2>Manipulate</h2>
+<pre class="r"><code>select(litters_data, group:gd0_weight)</code></pre>
+<pre><code>## # A tibble: 49 x 3
+##    group litter_number   gd0_weight
+##    &lt;chr&gt; &lt;chr&gt;                &lt;dbl&gt;
+##  1 Con7  #85                   19.7
+##  2 Con7  #1/2/95/2             27  
+##  3 Con7  #5/5/3/83/3-3         26  
+##  4 Con7  #5/4/2/95/2           28.5
+##  5 Con7  #4/2/95/3-3           NA  
+##  6 Con7  #2/2/95/3-2           NA  
+##  7 Con7  #1/5/3/83/3-3/2       NA  
+##  8 Con8  #3/83/3-3             NA  
+##  9 Con8  #2/95/3               NA  
+## 10 Con8  #3/5/2/2/95           28.5
+## # ... with 39 more rows</code></pre>
+</div>
 
 
 
